--- a/package/kernel/mt76/Makefile
+++ b/package/kernel/mt76/Makefile
@@ -463,31 +463,31 @@ define Package/mt76-test/install
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/tools/mt76-test $(1)/usr/sbin
 endef
 
-$(eval $(call KernelPackage,mt76-core))
-$(eval $(call KernelPackage,mt76-usb))
-$(eval $(call KernelPackage,mt76x02-usb))
-$(eval $(call KernelPackage,mt76x02-common))
-$(eval $(call KernelPackage,mt76x0-common))
-$(eval $(call KernelPackage,mt76x0e))
-$(eval $(call KernelPackage,mt76x0u))
-$(eval $(call KernelPackage,mt76x2-common))
-$(eval $(call KernelPackage,mt76x2u))
-$(eval $(call KernelPackage,mt76x2))
-$(eval $(call KernelPackage,mt7603))
-$(eval $(call KernelPackage,mt76-connac))
-$(eval $(call KernelPackage,mt76-sdio))
-$(eval $(call KernelPackage,mt7615-common))
-$(eval $(call KernelPackage,mt7615-firmware))
-$(eval $(call KernelPackage,mt7615e))
-$(eval $(call KernelPackage,mt7663-firmware-ap))
-$(eval $(call KernelPackage,mt7663-firmware-sta))
-$(eval $(call KernelPackage,mt7663-usb-sdio))
-$(eval $(call KernelPackage,mt7663u))
-$(eval $(call KernelPackage,mt7663s))
-$(eval $(call KernelPackage,mt7915e))
-$(eval $(call KernelPackage,mt7921-common))
-$(eval $(call KernelPackage,mt7921u))
-$(eval $(call KernelPackage,mt7921s))
-$(eval $(call KernelPackage,mt7921e))
-$(eval $(call KernelPackage,mt76))
-$(eval $(call BuildPackage,mt76-test))
+#$(eval $(call KernelPackage,mt76-core))
+#$(eval $(call KernelPackage,mt76-usb))
+#$(eval $(call KernelPackage,mt76x02-usb))
+#$(eval $(call KernelPackage,mt76x02-common))
+#$(eval $(call KernelPackage,mt76x0-common))
+#$(eval $(call KernelPackage,mt76x0e))
+#$(eval $(call KernelPackage,mt76x0u))
+#$(eval $(call KernelPackage,mt76x2-common))
+#$(eval $(call KernelPackage,mt76x2u))
+#$(eval $(call KernelPackage,mt76x2))
+#$(eval $(call KernelPackage,mt7603))
+#$(eval $(call KernelPackage,mt76-connac))
+#$(eval $(call KernelPackage,mt76-sdio))
+#$(eval $(call KernelPackage,mt7615-common))
+#$(eval $(call KernelPackage,mt7615-firmware))
+#$(eval $(call KernelPackage,mt7615e))
+#$(eval $(call KernelPackage,mt7663-firmware-ap))
+#$(eval $(call KernelPackage,mt7663-firmware-sta))
+#$(eval $(call KernelPackage,mt7663-usb-sdio))
+#$(eval $(call KernelPackage,mt7663u))
+#$(eval $(call KernelPackage,mt7663s))
+#$(eval $(call KernelPackage,mt7915e))
+#$(eval $(call KernelPackage,mt7921-common))
+#$(eval $(call KernelPackage,mt7921u))
+#$(eval $(call KernelPackage,mt7921s))
+#$(eval $(call KernelPackage,mt7921e))
+#$(eval $(call KernelPackage,mt76))
+#$(eval $(call BuildPackage,mt76-test))
